--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mckenziearts/laravel-notify": "^2.4",
+        "openai-php/client": "^0.7.3",
         "realrashid/sweet-alert": "^7.1",
         "tightenco/ziggy": "^1.0"
     },
