--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "aws/aws-sdk-php": "^3.285",
         "botman/botman": "^2.8",
         "botman/driver-web": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
@@ -16,6 +17,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mailersend/laravel-driver": "^2.3",
         "mckenziearts/laravel-notify": "^2.4",
         "openai-php/client": "^0.7.3",
         "realrashid/sweet-alert": "^7.1",
